--- a/build.settings
+++ b/build.settings
@@ -10,7 +10,7 @@ settings =
 		-- Supported values for orientation:
 		-- portrait, portraitUpsideDown, landscapeLeft, landscapeRight
 		default = "portrait",
-		supported = { "portrait", },
+		supported = { "portrait", "portraitUpsideDown" },
 	},
 
 	--
@@ -29,22 +29,11 @@ settings =
 	--
 	iphone =
 	{
+		xcassets = "Images.xcassets",
 		plist =
 		{
-			UIStatusBarHidden = false,
+			UIStatusBarHidden = true,
 			UILaunchStoryboardName = "LaunchScreen",
-			CFBundleIconFiles =
-			{
-				"Icon-40.png",
-				"Icon-58.png",
-				"Icon-76.png",
-				"Icon-80.png",
-				"Icon-87.png",
-				"Icon-120.png",
-				"Icon-152.png",
-				"Icon-167.png",
-				"Icon-180.png",
-			},
 		},
 	},
 
